fix project spacing on pg

--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,14 @@ html {
 html,
 body {
     width: 100%;
-    height: 100%;
+    height: 105%;
     font-size: 62.5%;
     font-weight: 300;
     font-family: "Nunito", Arial, Helvetica, sans-serif;
 }
 
 body {
+    
     background: url("../assets/beach_bg.jpg") no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -161,8 +162,8 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    margin: 35% 0;
-    gap: 2rem;
+    margin: 10% 0;
+    gap: 10rem;
 }
 
 /*  Contact Page */
@@ -978,15 +979,15 @@ form .contact_btn:active {
 @media all and (max-width: 900px){
 
     .aboutTxt{
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
 
 
 @media all and (max-width: 1047px) {
     header h3 {
-        margin-right: 15rem;
-        font-size: 5rem;
+        margin-right: 20rem;
+        font-size: 4rem;
     }
 
     .navBar {
